# oh_my_brain

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_CN.md  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: brain.example.yaml  models.example.yaml  worker.example.yaml
docs/: architecture.md  configuration.md  dev-doc-format.md  getting-started.md  index.md
examples/todo_api/: README.md  dev_doc.yaml
src/oh_my_brain/: __init__.py  cli.py
src/oh_my_brain/api/: __init__.py  dashboard.py
src/oh_my_brain/brain/: __init__.py  context_manager.py  doc_parser.py  git_manager.py  metrics.py  metrics_server.py  model_router.py  safety_checker.py  server.py  task_persistence.py  task_scheduler.py
src/oh_my_brain/cli/: doc_commands.py
src/oh_my_brain/doc/: __init__.py  generator.py  updater.py  validator.py
src/oh_my_brain/knowledge/: __init__.py  extractor.py  rag.py  vector_store.py  worker_integration.py
src/oh_my_brain/lifecycle/: __init__.py  checkpoints.py  feedback.py  tracker.py
src/oh_my_brain/logging/: __init__.py
src/oh_my_brain/platform/: __init__.py  base.py  detect.py  linux.py  windows.py
src/oh_my_brain/protocol/: __init__.py  messages.py  transport.py
src/oh_my_brain/schemas/: __init__.py  config.py  dev_doc.py  model_config.py  task.py
src/oh_my_brain/worker/: __init__.py  base.py  brain_client.py  llm_client.py  mini_agent_adapter.py
tests/: conftest.py  test_brain.py  test_context_and_router.py  test_dashboard_api.py  test_logging.py  test_metrics.py  test_mini_agent_adapter.py  test_platform.py  test_protocol.py  test_safety_checker.py  test_schemas.py  test_task_scheduler.py  test_worker.py
